feat(deploy): restart pm2

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <input id="mapInput" type="text" placeholder="Enter beatmap ID or beatmap link" value="4405432">
                 <button id="submit"></button>
             </div>
-            <button id="record">Record</button>
+            <!-- <button id="record">Record</button> -->
         </div>
         <div class="utilRow">
             <input type="file" name="map-dropper" id="map-dropper" accept=".osz,.osr,.osk">
