feat(replace): meta tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>JoSu!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta property="og:title" content="JoSu! | osu! Beatmap Viewer">
+    <meta property="og:site_name" content="JoSu! | osu! Beatmap Viewer">
+    <meta property="og:title" content="{{ title }}">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://preview.tryz.id.vn">
-    <meta property="og:description" content="osu! Beatmap Viewer on the web">
-    <meta property="og:image" content="https://fukutotojido.s-ul.eu/YuVf9ZAd">
+    <meta property="og:description" content="{{ description }}">
+    <meta property="og:image" content="{{ image }}">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="./styles/styles.css">
     <link rel="stylesheet" href="./styles/sidePanel.css">
