--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 
 <body>
-    <div class="placeholder">PlaceHolder</div>
+    <div class="placeholder">{{ title }}</div>
     <div id="main">
 
     </div>
