feat(renderer): added AA and resolution

--- a/index.html
+++ b/index.html
@@ -160,6 +160,17 @@
                     </dialog>
                 </div>
             </div>
+            <div class="list">
+                <div class="selection slider">
+                    <label for="dim">resolution</label>
+                    <div id="resolutionVal" class="val">1.00</div>
+                    <input type="range" id="resolution" name="resolution" min="0.5" max="2" step="0.01" value="1.0">
+                </div>
+                <div class="selection">
+                    <label for="aa">antialiasing</label>
+                    <input type="checkbox" id="aa" name="aa" checked>
+                </div>
+            </div>
         </div>
         <div class="section">
             <div class="title">beatmap provider</div>
