--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <script src="/lib/Vibrant.min.js"></script>
     <script src="/lib/zip-fs-full.js"></script>
     <script src="/lib/lzma_worker.js"></script>
+    <script src="/lib/kali.min.js"/>
 
     <script src="./lib/osujs.js" type="module"></script>
     <script src="./lib/leb128.js" type="module"></script>
