fix: buffer not loadable through CDN due to SameOrigin something something i forgor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="./styles/sidePanel.css">
     <link rel="stylesheet" href="./styles/mobile.css">
 
-    <!-- <script src="https://bundle.run/buffer@6.0.3"></script> -->
+    <script src="/lib/buffer.js"></script>
     <script src="/lib/Vibrant.min.js"></script>
     <script src="/lib/zip-fs-full.js"></script>
     <script src="/lib/lzma_worker.js"></script>
