feat: SAY MY NAME

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             <div class="horizontalList">
                 <a href="https://osu.ppy.sh/users/8266808" target="_blank" rel="noreferrer noopener">
                     <img src="/static/osi.svg" class="linkIcon">
-                    <div class="linkContent">[Boy]DaLat</div>
+                    <div class="linkContent">ANON TOKYO</div>
                 </a>
                 <a href="https://twitter.com/FukutoTojido" target="_blank" rel="noreferrer noopener">
                     <img src="/static/twitter.png" class="linkIcon">
