feat: adding some bs temporarily

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>Beatmap Viewer Web 2.0</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/src/style.css">
+    <title>Document</title>
+</head>
+<body class="w-screen h-screen flex">
+    <div id="app" class="w-full h-full"></div>
+    <script type="module" src="/src/index.ts"></script>
+</body>
+</html>
