feat: test PIXI Layout v3

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="/src/style.css">
     <title>Document</title>
 </head>
-<body class="w-screen h-screen flex">
-    <div id="app" class="w-full h-full"></div>
+<body>
+    <div class="w-full h-[50px] bg-black/20"></div>
+    <div id="app" class="relative w-full h-full"></div>
+    <button class="absolute top-0 left-0 p-5 rounded-xl bg-gray-600" id="toggleSideBar">Toggle</button>
     <script type="module" src="/src/index.ts"></script>
 </body>
 </html>
