--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div class="w-full h-[50px] bg-black/20"></div>
     <div id="app" class="relative w-full h-full"></div>
     <button class="absolute top-0 left-0 p-5 rounded-xl bg-gray-600" id="toggleSideBar">Toggle</button>
+    <button class="absolute top-0 left-[200px] p-5 rounded-xl bg-gray-600" id="toggleAudio">Toggle Audio</button>
     <script type="module" src="/src/index.ts"></script>
 </body>
 </html>
