--- a/index.html
+++ b/index.html
@@ -10,11 +10,46 @@
 
 <body>
     <div class="absolute top-0 left-0 w-full h-full bg-black/50 backdrop-blur-lg"></div>
-    <div class="relative w-full h-[50px] bg-black/20 shrink-0"></div>
+    <div class="relative w-full h-[50px] shrink-0 flex items-center gap-2.5" id="topBar">
+        <div class="flex items-center h-full has-focus-within:outline-2 has-focus-within:outline-text rounded-full min-h-10" id="search">
+            <input type="text" name="" id="idInput"
+                class="min-w-[264px] h-full rounded-full rounded-r-none focus-within:outline-0 bg-black/40 px-5 placeholder:text-text/60 text-text text-xs flex-1"
+                placeholder="Open beatmap with id">
+            <button class="h-full pr-5 rounded-full rounded-l-none bg-black/40" tabindex="-1" id="submitId">
+                <i class="ri-search-line text-text text-[24px]"></i>
+            </button>
+        </div>
+        <div class="flex-1 flex flex-col px-5 min-h-10" id="metadata">
+            <div class="text-xs text-text" id="artist">Artist</div>
+            <div class="text-sm font-medium text-text" id="title">Title</div>
+        </div>
+        <label for="diffs" class="relative h-full min-h-10 w-[294px] text-xs" id="diffsLabel">
+            <button id="diffs" class="hidden"></button>
+            <div
+                class="w-full h-full bg-black/40 flex items-center gap-2.5 rounded-full px-5 hover:bg-white/10 transition-colors cursor-pointer text-text select-none">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg" id="extraMode">
+                    <g clip-path="url(#clip0_1_34)">
+                        <rect x="1" y="1" width="18" height="18" rx="9" stroke="white" stroke-width="2" />
+                        <rect x="5" y="5" width="10" height="10" rx="5" fill="white" />
+                    </g>
+                    <defs>
+                        <clipPath id="clip0_1_34">
+                            <rect width="20" height="20" fill="white" />
+                        </clipPath>
+                    </defs>
+                </svg>
+                <span id="masterDiff">Difficulty</span>
+            </div>
+            <div id="diffsContainer"
+                class="absolute w-full top-[100%] left-0 mt-2.5 bg-black/40 backdrop-blur-2xl p-2.5 rounded-[20px] z-99 flex-col gap-[5px] hidden">
+            </div>
+        </label>
+    </div>
     <div id="app" class="relative w-full flex-1 overflow-hidden"></div>
-    <button class="absolute top-0 left-0 p-5 rounded-xl bg-gray-600" id="toggleSkin">Cycle Skin</button>
-    <button class="absolute top-0 left-[150px] p-5 rounded-xl bg-gray-600 hidden" id="toggleBeatmap">Cycle
-        Beatmap</button>
+    <!-- <button class="absolute top-0 right-[50%] -translate-x-[50%] p-5 rounded-xl bg-gray-600" id="toggleSkin">Cycle Skin</button> -->
+    <!-- <button class="absolute top-0 left-[150px] p-5 rounded-xl bg-gray-600 hidden" id="toggleBeatmap">Cycle
+        Beatmap</button> -->
+    <!-- <button class="absolute top-0 left-[300px] p-5 rounded-xl bg-gray-600" id="destroy">Destroy</button> -->
     <script type="module" src="/src/index.ts"></script>
     <div class="absolute w-full h-full top-0 left-0 flex items-center justify-center gap-2.5 bg-black/50" id="loading">
         <span class="loader scale-50"></span>
