--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             </button>
         </div>
         <div class="flex-1 flex flex-col px-5 min-h-10" id="metadata">
-            <div class="text-xs text-text" id="artist">Artist</div>
-            <div class="text-sm font-medium text-text" id="title">Title</div>
+            <div class="text-sm font-medium text-text" id="title">Artist - Title</div>
+            <div class="text-xs text-text" id="mapper">by Mapper</div>
         </div>
         <label for="diffs" class="relative h-full min-h-10 w-[294px] text-xs" id="diffsLabel">
             <button id="diffs" class="hidden"></button>
