feat: add diffname when using multi-mode and stats

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                <span id="masterDiff" class="flex-1 text-left">Difficulty</span>
+                <span id="masterDiff" class="flex-1 text-left truncate">Difficulty</span>
                 <span id="masterSR">SR★</span>
             </div>
             <div id="diffsContainer"
