fix: overflow diff container

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <span id="masterSR">SR★</span>
             </div>
             <div id="diffsContainer"
-                class="absolute w-full top-[100%] left-0 mt-2.5 bg-black/70 backdrop-blur-2xl p-2.5 rounded-[20px] z-99 flex-col gap-[5px] hidden max-h-[50vh]">
+                class="absolute w-full top-[100%] left-0 mt-2.5 bg-black/70 backdrop-blur-2xl p-2.5 rounded-[20px] z-99 flex-col gap-[5px] hidden max-h-[50vh] overflow-auto">
             </div>
         </label>
     </div>
