--- a/index.html
+++ b/index.html
@@ -11,23 +11,26 @@
 <body>
     <div class="absolute top-0 left-0 w-full h-full bg-black/50 backdrop-blur-lg"></div>
     <div class="relative w-full min-h-[50px] shrink-0 flex items-center gap-2.5" id="topBar">
-        <button class="min-h-10 h-full px-5 rounded-full bg-black/40 hover:bg-white/10 cursor-pointer"
-            id="settingsButton">
-            <i class="ri-settings-3-fill text-white text-[24px]"></i>
-        </button>
-        <div class="flex items-center h-full has-focus-within:outline-2 has-focus-within:outline-text rounded-full min-h-10"
-            id="search">
-            <input type="text" name="" id="idInput"
-                class="min-w-[264px] h-full rounded-full rounded-r-none focus-within:outline-0 bg-black/40 px-5 placeholder:text-white/60 text-white text-xs flex-1"
-                placeholder="Open beatmap with id">
-            <button class="h-full pr-5 rounded-full rounded-l-none bg-black/40" tabindex="-1" id="submitId">
-                <i class="ri-search-line text-white text-[24px]"></i>
+        <div class="flex items-center flex-1 gap-2.5 w-full h-full">
+            <button class="min-h-10 h-full px-5 rounded-full bg-black/40 hover:bg-white/10 cursor-pointer"
+                id="settingsButton">
+                <i class="ri-settings-3-fill text-white text-[24px]"></i>
             </button>
+            <div class="flex items-center h-full has-focus-within:outline-2 has-focus-within:outline-text rounded-full min-h-10"
+                id="search">
+                <input type="text" name="" id="idInput"
+                    class="min-w-[264px] h-full rounded-full rounded-r-none focus-within:outline-0 bg-black/40 px-5 placeholder:text-white/60 text-white text-xs flex-1"
+                    placeholder="Open beatmap with id">
+                <button class="h-full pr-5 rounded-full rounded-l-none bg-black/40" tabindex="-1" id="submitId">
+                    <i class="ri-search-line text-white text-[24px]"></i>
+                </button>
+            </div>
+            <div class="flex-1 flex flex-col px-5" id="metadata">
+                <div class="text-sm font-medium text-white" id="title">Artist - Title</div>
+                <div class="text-xs text-white" id="mapper">by Mapper</div>
+            </div>
         </div>
-        <div class="flex-1 flex flex-col px-5" id="metadata">
-            <div class="text-sm font-medium text-white" id="title">Artist - Title</div>
-            <div class="text-xs text-white" id="mapper">by Mapper</div>
-        </div>
+
         <label for="diffs" class="relative h-full min-h-[50px] w-[320px] text-xs" id="diffsLabel">
             <button id="diffs" class="hidden"></button>
             <div
@@ -54,8 +57,7 @@
     </div>
     <div id="app" class="relative w-full flex-1 overflow-hidden"></div>
     <div class="fixed top-0 left-0 w-full h-full bg-black/50 overlayHidden" id="overlay"></div>
-    <div
-        class="fixed top-0 w-[600px] max-w-[80vw] h-screen bg-crust flex flex-col gap-2.5 text-text" id="settings">
+    <div class="fixed top-0 w-[600px] max-w-[80vw] h-screen bg-crust flex flex-col gap-2.5 text-text" id="settings">
         <div class="bg-base p-10 flex flex-col w-full">
             <div class="font-medium text-3xl">Settings</div>
             <div>Change how JoSu! behaves</div>
