--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
             <div>Change how JoSu! behaves</div>
         </div>
         <div class="bg-base p-10 flex flex-col w-full gap-5">
+            <div class="font-medium">Skinning</div>
+            <label for="skins" class="relative h-full min-h-[50px] w-full text-xs" id="diffsLabel">
+                <button id="skins" class="hidden"></button>
+                <div
+                    class="w-full h-full bg-black/40 flex items-center gap-2.5 rounded-full px-5 hover:bg-white/10 transition-colors cursor-pointer text-text select-none">
+                    <span id="currentSkin" class="flex-1 text-left truncate">Current Skin</span>
+                </div>
+                <div id="skinsContainer"
+                    class="absolute w-full top-[100%] left-0 mt-2.5 bg-black/70 backdrop-blur-2xl p-2.5 rounded-[20px] z-99 flex-col gap-[5px] hidden max-h-[50vh] overflow-auto">
+                </div>
+            </label>
+        </div>
+        <div class="bg-base p-10 flex flex-col w-full gap-5">
             <div class="font-medium">Background</div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
