--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
                     class="absolute w-full top-[100%] left-0 mt-2.5 bg-black/70 backdrop-blur-2xl p-2.5 rounded-[20px] z-99 flex-col gap-[5px] hidden max-h-[50vh] overflow-auto">
                 </div>
             </label>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer" for="disableBeatmapSkin" tabindex="-1">Ignore beatmap skin</label>
+                    <input type="checkbox" name="disableBeatmapSkin" id="disableBeatmapSkin">
+                </div>
+            </div>
         </div>
         <div class="bg-base p-10 flex flex-col w-full gap-5">
             <div class="font-medium">Background</div>
