feat: add saving configs to local storage

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
     <div id="app" class="relative w-full flex-1 overflow-hidden"></div>
     <div class="fixed top-0 left-0 w-full h-full bg-black/50 overlayHidden" id="overlay"></div>
-    <div class="fixed top-0 w-[600px] max-w-[80vw] h-screen bg-crust flex flex-col gap-2.5 text-text" id="settings">
+    <div class="fixed top-0 w-[600px] max-w-[80vw] h-svh overflow-auto bg-crust flex flex-col gap-2.5 text-text" id="settings">
         <div class="bg-base p-10 flex flex-col w-full">
             <div class="font-medium text-3xl">Settings</div>
             <div>Change how JoSu! behaves</div>
