--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
-                    <label class="font-normal flex-1 cursor-pointer" for="hitsound">Disable Beatmap Hitsound</label>
+                    <label class="font-normal flex-1 cursor-pointer" for="hitsound">Disable beatmap hitsound</label>
                     <input type="checkbox" name="hitsound" id="hitsound" tabindex="-1">
                 </div>
             </div>
@@ -154,6 +154,14 @@
                         <span class="text-xs">Load beatmap asynchronously for responsiveness</span>
                     </label>
                     <input type="checkbox" name="asyncLoading" id="asyncLoading" tabindex="-1">
+                </div>
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label for="reloadDefaultSkins" class="relative h-full min-h-[50px] w-full text-xs">
+                        <button id="reloadDefaultSkins"
+                            class="w-full h-full bg-crust flex items-center gap-2.5 rounded-full px-5 hover:bg-text transition-colors cursor-pointer text-text hover:text-base select-none">
+                            <span id="currentSkin" class="flex-1 text-center truncate">Reload default skins</span>
+                        </button>
+                    </label>
                 </div>
             </div>
         </div>
