--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <body>
+    <link rel="stylesheet" href="/src/style.css" />
     <div class="absolute top-0 left-0 w-full h-full bg-black/50 backdrop-blur-lg"></div>
     <main>
         <div class="relative w-full min-h-[50px] shrink-0 flex items-center gap-2.5" id="topBar">
