feat: update opengraph / twitter preview

--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
                     </label>
                     <input type="checkbox" name="asyncLoading" id="asyncLoading" tabindex="-1">
                 </div>
+
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
                     <label for="reloadDefaultSkins" class="relative h-full min-h-[50px] w-full text-xs">
                         <button id="reloadDefaultSkins"
