feat: overlapping multi mode

--- a/index.html
+++ b/index.html
@@ -146,7 +146,14 @@
                     </label>
                     <input type="checkbox" name="asyncLoading" id="asyncLoading" tabindex="-1">
                 </div>
-
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer flex flex-col" for="overlapGameplays">
+                        <span>Overlap gameplays in multi-mode</span>
+                    </label>
+                    <input type="checkbox" name="overlapGameplays" id="overlapGameplays" tabindex="-1">
+                </div>
             </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
