feat: Hard Rock mod

--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
         </div>
         <div id="app" class="relative w-full flex-1 overflow-hidden"></div>
         <div class="fixed top-0 left-0 w-full h-full bg-black/50 overlayHidden" id="overlay"></div>
-
     </main>
     <div class="fixed top-0 w-[600px] max-w-[80vw] h-svh overflow-auto bg-crust flex flex-col gap-2.5 text-text"
         id="settings">
@@ -153,6 +152,14 @@
                         <span>Overlap gameplays in multi-mode</span>
                     </label>
                     <input type="checkbox" name="overlapGameplays" id="overlapGameplays" tabindex="-1">
+                </div>
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer flex flex-col" for="modsHR">
+                        <span>Hard Rock</span>
+                    </label>
+                    <input type="checkbox" name="modsHR" id="modsHR" tabindex="-1">
                 </div>
             </div>
             <div class="flex flex-col w-full gap-2.5">
