feat: Tone.js integration

--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
             </div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer flex flex-col" for="modsDT">
+                        <span>Double Time</span>
+                    </label>
+                    <input type="checkbox" name="modsDT" id="modsDT" tabindex="-1">
+                </div>
+            </div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
                     <label for="reloadDefaultSkins" class="relative h-full min-h-[50px] w-full text-xs">
                         <button id="reloadDefaultSkins"
                             class="w-full h-full bg-crust flex items-center gap-2.5 rounded-full px-5 hover:bg-text transition-colors cursor-pointer text-text hover:text-base select-none">
