--- a/index.html
+++ b/index.html
@@ -138,17 +138,17 @@
         <div class="bg-base p-10 flex flex-col w-full gap-5">
             <div class="font-medium">Beatmap Mirror</div>
             <div class="flex flex-col w-full gap-2.5">
-                <div class="flex items-center justify-between w-full text-sm">
+                <div class="flex items-center justify-between w-full text-sm gap-2.5">
+                    <input type="radio" name="beatmapMirror" id="mirror-nerinyan" value="Nerinyan" data-url="https://api.nerinyan.moe/d/$setId" tabindex="-1">
                     <label class="font-normal flex-1 cursor-pointer flex flex-col" for="mirror-nerinyan">
                         <span>Nerinyan</span>
                     </label>
-                    <input type="radio" name="beatmapMirror" id="mirror-nerinyan" value="Nerinyan" data-url="https://api.nerinyan.moe/d/$setId" tabindex="-1">
                 </div>
-                <div class="flex items-center justify-between w-full text-sm">
+                <div class="flex items-center justify-between w-full text-sm gap-2.5">
+                    <input type="radio" name="beatmapMirror" id="mirror-catboy" value="Catboy" data-url="https://catboy.best/d/$setId" tabindex="-1">
                     <label class="font-normal flex-1 cursor-pointer flex flex-col" for="mirror-catboy">
                         <span>Catboy</span>
                     </label>
-                    <input type="radio" name="beatmapMirror" id="mirror-catboy" value="Catboy" data-url="https://catboy.best/d/$setId" tabindex="-1">
                 </div>
             </div>
         </div>
