feat: add spectrogram for modding purpose

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             </label>
         </div>
         <div id="app" class="relative w-full flex-1 overflow-hidden"></div>
+        <div class="absolute bottom-0 right-0 invisible" id="a"></div>
         <div class="fixed top-0 left-0 w-full h-full bg-black/50 overlayHidden" id="overlay"></div>
     </main>
     <div class="fixed top-0 w-[600px] max-w-[80vw] h-svh overflow-auto bg-crust flex flex-col gap-2.5 text-text"
