feat: add difficulty graph | add fullscreen mode

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <label for="diffs" class="relative h-full min-h-[50px] w-[320px] text-xs" id="diffsLabel">
                 <button id="diffs" class="hidden"></button>
                 <div
-                    class="w-full h-full bg-black/40 flex items-center gap-2.5 rounded-full px-5 hover:bg-white/10 transition-colors cursor-pointer text-white select-none">
+                    class="w-full h-full min-h-[50px] bg-black/40 flex items-center gap-2.5 rounded-full px-5 hover:bg-white/10 transition-colors cursor-pointer text-white select-none">
                     <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg"
                         id="extraMode">
                         <g clip-path="url(#clip0_1_34)">
