feat: grid toggle

--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
             </div>
         </div>
         <div class="bg-base p-10 flex flex-col w-full gap-5">
+            <div class="font-medium">Gameplay</div>
+            <div class="flex flex-col w-full gap-2.5">
+                <div class="flex items-center justify-between w-full text-sm">
+                    <label class="font-normal flex-1 cursor-pointer" for="grid" tabindex="-1">Show Grid</label>
+                    <input type="checkbox" name="grid" id="grid">
+                </div>
+            </div>
+        </div>
+        <div class="bg-base p-10 flex flex-col w-full gap-5">
             <div class="font-medium">Background</div>
             <div class="flex flex-col w-full gap-2.5">
                 <div class="flex items-center justify-between w-full text-sm">
