fix: overlapping html id

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="bg-base p-10 flex flex-col w-full gap-5">
             <div class="font-medium">Skinning</div>
-            <label for="skins" class="relative h-full min-h-[50px] w-full text-xs" id="diffsLabel">
+            <label for="skins" class="relative h-full min-h-[50px] w-full text-xs" id="skinsLabel">
                 <button id="skins" class="hidden"></button>
                 <div
                     class="w-full h-full bg-black/40 flex items-center gap-2.5 rounded-full px-5 hover:bg-white/10 transition-colors cursor-pointer text-text select-none">
