--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" href="/src/app/style.css" />
     <div class="absolute top-0 left-0 w-full h-full bg-black/50 backdrop-blur-lg"></div>
     <main>
-        <div class="relative w-full min-h-[50px] shrink-0 flex items-center gap-2.5" id="topBar">
+        <div class="relative w-full min-h-[50px] shrink-0 flex items-center gap-2.5 overflow-hidden" id="topBar">
             <div class="flex items-center flex-1 gap-2.5 w-full h-full">
                 <button class="min-h-10 h-full px-5 rounded-full bg-black/40 hover:bg-white/10 cursor-pointer"
                     id="settingsButton">
@@ -17,9 +17,9 @@
                         <i class="ri-search-line text-white text-[24px]"></i>
                     </button>
                 </div>
-                <div class="flex-1 flex flex-col px-5" id="metadata">
-                    <div class="text-sm font-medium text-white" id="title">Artist - Title</div>
-                    <div class="text-xs text-white" id="mapper">by Mapper</div>
+                <div class="flex-1 flex flex-col px-5 overflow-hidden text-ellipsis" id="metadata">
+                    <div class="text-sm font-medium text-white line-clamp-1" id="title">Artist - Title</div>
+                    <div class="text-xs text-white line-clamp-1" id="mapper">by Mapper</div>
                 </div>
             </div>
 
