--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                         <i class="ri-search-line text-white text-[24px]"></i>
                     </button>
                 </div>
-                <div class="flex-1 flex flex-col px-5 overflow-hidden text-ellipsis" id="metadata">
-                    <div class="text-sm font-medium text-white line-clamp-1" id="title">Artist - Title</div>
-                    <div class="text-xs text-white line-clamp-1" id="mapper">by Mapper</div>
+                <div class="flex-1 flex flex-col px-5" id="metadata">
+                    <div class="text-sm font-medium text-white" id="title">Artist - Title</div>
+                    <div class="text-xs text-white" id="mapper">by Mapper</div>
                 </div>
             </div>
 
