--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                     </button>
                 </div>
                 <div class="flex-1 flex flex-col px-5" id="metadata">
-                    <div class="text-sm font-medium text-white" id="title">Artist - Title</div>
-                    <div class="text-xs text-white" id="mapper">by Mapper</div>
+                    <div class="text-sm font-medium text-white line-clamp-1" id="title">Artist - Title</div>
+                    <div class="text-xs text-white line-clamp-1" id="mapper">by Mapper</div>
                 </div>
             </div>
 
